# lammpskit

./: .coverage  .dockerignore  .flake8  .gitignore  .readthedocs.yaml  .travis.yaml  CHANGELOG.md  CI_MODERNIZATION_SUMMARY.md  CONTRIBUTING.md  DOCUMENTATION_WORKFLOW.md  Dockerfile  GITHUB_ACTIONS_RESOLUTION_SUMMARY.md  INSTALLATION_METHODS.md  LOCAL_DOCKER_TEST.md  MANIFEST.in  OVITO_CI_INTEGRATION.md  PROJECT_STRUCTURE.md  PROJECT_STRUCTURE.txt  README.md  ci_test.py  coverage.xml  phase2_categorization_report.md  phase3a_safe_removals_complete.md  phase3b_questionable_modules_complete.md  phase3c_over_engineering_simplification_complete.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  streamlining_project_complete_summary.md  test_centralized_plots.py
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docker-ci.yml  docs-build-only.yml  docs.yml  tests.yml
data/ecellmodel/processed/trajectory_series/: 1160000.lammpstrj  1165000.lammpstrj  1170000.lammpstrj  1175000.lammpstrj  1185000.lammpstrj
data/ecellmodel/raw/: 2forming.1500000.lammpstrj  local1.0.lammpstrj  local2.1_1000.lammpstrj  local2.2_3310000.lammpstrj  temp2_900K2.lammpstrj  temp3_1300K2.lammpstrj  uniform1.0.lammpstrj  uniform2.1_50000.lammpstrj  uniform2.2_3310000.lammpstrj
data/processed/ecellmodel/trajectory_series/: 1155000.lammpstrj  1180000.lammpstrj  1190000.lammpstrj  1195000.lammpstrj
docs/source/: api_reference.rst  conf.py  data_formats.rst  examples.rst  index.rst  installation.rst  lammpskit.config.rst  lammpskit.ecellmodel.data_processing.rst  lammpskit.ecellmodel.filament_layer_analysis.rst  lammpskit.ecellmodel.rst  lammpskit.io.lammps_readers.rst  lammpskit.io.rst  lammpskit.plotting.rst  lammpskit.plotting.timeseries_plots.rst  lammpskit.plotting.utils.rst  lammpskit.rst  modules.rst  quickstart.rst
docs/source/_templates/autosummary/: class.rst  function.rst
examples/ecellmodel/: example_analysis.py  new_analysis.py
lammpskit/: __init__.py  cli.py  config.py
lammpskit/ecellmodel/: __init__.py  analysis.py  data_processing.py  filament_layer_analysis.py  filament_layer_pre.py  plotting.py  workflows.py
lammpskit/io/: __init__.py  lammps_readers.py
lammpskit/plotting/: __init__.py  timeseries_plots.py  utils.py
source/: lammpskit.ecellmodel.rst  lammpskit.io.rst  lammpskit.plotting.rst  lammpskit.rst  modules.rst
tests/: __init__.py  conftest.py  test_centralized_font_control.py  test_config.py  test_config_atomic_processing.py  test_io.py  test_plotting.py  test_timeseries_plots.py  test_validation.py
tests/test_ecellmodel/: manual_plot_atomic_distribution.py  test_analyze_clusters.py  test_data_processing.py  test_data_readers.py  test_plot_atomic_charge_distribution.py  test_plot_atomic_distribution.py  test_plot_displacement_comparison.py  test_plot_displacement_timeseries.py  test_plot_multiple_cases.py  test_refactored_functions.py  test_track_filament_evolution.py
tests/test_ecellmodel/test_data/: 1forming.1200000.lammpstrj  2break-0.5V.500000.lammpstrj  2formed0V.500000.lammpstrj  3set-0.1V.500000.lammpstrj
tests/test_ecellmodel/test_data/data_for_layer_analysis/: malformed-0.1V.500000.lammpstrj  no_clusters-0.1V.500000.lammpstrj
usage/ecellmodel/: README.md  run_analysis.py
