[project]
name = "lammpskit"
version = "0.1.0"
description = "Toolkit for MD simulations and analysis with LAMMPS."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "GPL-3.0-or-later"}
authors = [
    { name = "Simanta Lahkar", email = "simantalahkar@hotmail.com" }
]
dependencies = []

[dependency-groups]
dev = [
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "ovito>=3.12.4",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
]

[project.urls]
Homepage = "https://github.com/simantalahkar/lammpskit"
Documentation = "https://github.com/simantalahkar/lammpskit#readme"
Source = "https://github.com/simantalahkar/lammpskit"
