[project]
name = "lammpskit"
version = "0.2.0"
description = "Toolkit for MD simulations and analysis with LAMMPS."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "GPL-3.0-or-later"}
authors = [
    { name = "Simanta Lahkar", email = "simantalahkar@hotmail.com" }
]
dependencies = [
    "numpy>=2.3.1",
    "matplotlib>=3.10.3",
    "ovito>=3.12.4"
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-mpl>=0.17.0",
    "Jinja2>=3.1.6",
    "MarkupSafe>=3.0.2",
    "pillow>=11.2.1",
    "packaging>=25.0",
    "build>=1.2.2.post1",
    "coverage>=7.9.1",
    "cycler>=0.12.1",
    "fonttools>=4.58.4",
    "pluggy>=1.6.0",
    "pyparsing>=3.2.3",
    "python-dateutil>=2.9.0.post0",
    "readme_renderer>=44.0",
    "requests>=2.32.4",
    "requests-toolbelt>=1.0.0",
    "rich>=14.0.0",
    "setuptools>=80.9.0",
    "twine>=6.1.0"
]

[project.urls]
Homepage = "https://github.com/simantalahkar/lammpskit"
Documentation = "https://github.com/simantalahkar/lammpskit#readme"
Source = "https://github.com/simantalahkar/lammpskit"
