[project]
name = "lammpskit"
version = "1.1.0"
description = "Toolkit for MD simulations and analysis with LAMMPS - specialized for electrochemical memory device characterization and filament analysis."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "GPL-3.0-or-later"}
authors = [
    { name = "Simanta Lahkar", email = "simantalahkar@hotmail.com" }
]
keywords = ["LAMMPS", "molecular-dynamics", "ReRAM", "electrochemical", "memory-devices", "filament-analysis", "HfTaO", "materials-science"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "numpy>=2.3.1",
    "matplotlib>=3.10.3",
    "ovito>=3.12.4"
]

[dependency-groups]
dev = [
    # Testing framework
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-mpl>=0.17.0",
    "coverage>=7.9.1",
    
    # Documentation tools
    "sphinx>=8.2.3",
    "sphinx-autodoc-typehints>=3.2.0",
    "sphinx-rtd-theme>=3.0.2",
    "Jinja2>=3.1.6",
    "MarkupSafe>=3.0.2",
    
    # Code quality and formatting
    "black>=25.1.0",
    "isort>=5.13.0",
    "flake8>=7.3.0",
    "mypy>=1.8.0",
    
    # Build and distribution
    "build>=1.2.2.post1",
    "setuptools>=80.9.0",
    "wheel>=0.45.1",
    "twine>=6.1.0",
    "readme_renderer>=44.0",
    
    # Development utilities
    "pillow>=11.2.1",
    "packaging>=25.0",
    "cycler>=0.12.1",
    "fonttools>=4.58.4",
    "pluggy>=1.6.0",
    "pyparsing>=3.2.3",
    "python-dateutil>=2.9.0.post0",
    "requests>=2.32.4",
    "requests-toolbelt>=1.0.0",
    "rich>=14.0.0",
]

[project.urls]
Homepage = "https://github.com/simantalahkar/lammpskit"
Documentation = "https://lammpskit.readthedocs.io/"
Source = "https://github.com/simantalahkar/lammpskit"
"Bug Tracker" = "https://github.com/simantalahkar/lammpskit/issues"
"Changelog" = "https://github.com/simantalahkar/lammpskit/blob/main/CHANGELOG.md"
"Discussions" = "https://github.com/simantalahkar/lammpskit/discussions"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["tests*", "supporting_docs*", "usage*", "docs*"]

[tool.black]
line-length = 127
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 127
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--disable-warnings",
    "--cov=lammpskit",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
